--- a/src/app/work-card/work-card.component.html
+++ b/src/app/work-card/work-card.component.html
@@ -1,5 +1,5 @@
 <mat-card class="work-card mat-elevation-z4">
-    <mat-card-title>{{workCard.title | titlecase}}</mat-card-title>
+    <mat-card-title>{{workCard.title}}</mat-card-title>
     <mat-card-subtitle>Location: {{workCard.location}}</mat-card-subtitle>
     <mat-accordion>
         <mat-expansion-panel class="mat-elevation-z3" (opened)="panelOpenState = true" (closed)="panelOpenState = false">
