--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800;900&display=swap');
 
+main {
+    position: relative;
+}
+
 *{
     font-family: 'Nunito', sans-serif;
     
