--- a/src/styles.css
+++ b/src/styles.css
@@ -20,7 +20,10 @@ body {
     text-shadow: 1px 1px 2px #000000;
 }
 
-@media (max-width: 700px) {
+.dark-theme .social-a{
+    color: cyan;
+}
+@media (max-width: 750px) {
     .title{
         font-size: 1.5em;
         font-weight: 700;
@@ -37,7 +40,7 @@ body {
     }
 }
 
-@media (min-width: 701px){
+@media (min-width: 751px){
     .title{
         font-size: 1.8em;
         font-weight: 700;
@@ -50,6 +53,10 @@ body {
     }
 }
 
+.spacer{
+    flex: 1 1 auto;
+}
+
 .wrapper{
     display: table;
     margin: 4em auto;
@@ -60,7 +67,7 @@ body {
     text-align: center;
 }
 
-.card{
+mat-card{
     border-radius: 15px!important;
 }
 
@@ -70,4 +77,8 @@ body {
 
 .button:hover{
     font-weight: 800;
+}
+
+.social-a:hover{
+    font-weight: 700;
 }
