--- a/src/my-theme.scss
+++ b/src/my-theme.scss
@@ -3,7 +3,7 @@
 @include mat-core();
 
 $light-theme-primary: mat-palette($mat-blue);
-$light-theme-accent: mat-palette($mat-teal);
+$light-theme-accent: mat-palette($mat-teal, 600);
 $light-theme-background-color: #DEE4E7;
 
 $light-theme: mat-light-theme($light-theme-primary,$light-theme-accent);
