--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -13,12 +13,12 @@
                 </ul>
             </div>
             <div style="margin-top: 2em; display: block; text-align: center;">
-                <button *ngIf="!isAndroid(); else elseBlock" style="width: 120px;" mat-raised-button color="accent" class="button" (click)="copyText(contactInfo.phoneNo)">Copy number</button>
-                <ng-template #elseBlock><a style="width: 120px;" mat-raised-button color="accent" class="button" href="tel:{{contactInfo.phoneNo}}">Call me</a></ng-template>
+                <button *ngIf="!isAndroid(); else elseBlockNumber" style="width: 120px;" mat-raised-button color="accent" class="button" (click)="copyText(contactInfo.phoneNo)">Copy number</button>
+                <ng-template #elseBlockNumber><a style="width: 120px;" mat-raised-button color="accent" class="button" href="tel:{{contactInfo.phoneNo}}">Call me</a></ng-template>
               </div>
             <div style="margin-top: 1em; display: block; text-align: center;">
-                <button *ngIf="!isAndroid(); else elseBlock" style="width: 120px;" mat-raised-button color="accent" class="button" (click)="copyText(contactInfo.phoneNo)">Copy email</button>
-                <ng-template #elseBlock><a style="width: 120px;" mat-raised-button color="accent" class="button" href="mailto:{{contactInfo.email}}">Email me</a></ng-template>
+                <button *ngIf="!isAndroid(); else elseBlockEmail" style="width: 120px;" mat-raised-button color="accent" class="button" (click)="copyText(contactInfo.phoneNo)">Copy email</button>
+                <ng-template #elseBlockEmail><a style="width: 120px;" mat-raised-button color="accent" class="button" href="mailto:{{contactInfo.email}}">Email me</a></ng-template>
             </div>
         </mat-card-content>
   </mat-card>
