Change Junior Developer to Software Engineer

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="label-wrapper"><label class="title">Welcome to my website!</label></div>
     <mat-card class="card mat-elevation-z4">
         <mat-card-title>Stefanos Michelakis</mat-card-title>
-        <mat-card-subtitle>Junior Developer</mat-card-subtitle>
+        <mat-card-subtitle>Software Engineer</mat-card-subtitle>
         <mat-card-content>
             <p>Here you can find information about me, my projects and my previous work expirience!</p>
             <p>If you are interested in learning information about me you can either download my resume by pressing the
