--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -2,7 +2,7 @@
     <div class="label-wrapper"><label class="title">About Me</label></div>
     <mat-card class="card mat-elevation-z4">
         <mat-card-title>Stefanos Michelakis</mat-card-title>
-        <mat-card-subtitle>Junior Developer</mat-card-subtitle>
+        <mat-card-subtitle>Software Engineer</mat-card-subtitle>
         <mat-card-content [innerHtml]="aboutMe">
         </mat-card-content>
   </mat-card>
