--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,24 @@
 <mat-sidenav-container class="mat-app-background" [ngClass]="{'dark-theme': isDarkTheme, 'light-theme-bg': !isDarkTheme}">
     <mat-sidenav  #sidenav role="navigation" color="primary">
         <div fxLayout="column" *ngFor="let page of pages;last as isLast">
-            <button class="sidenav_a" routerLinkActive="mat-elevation-z4 list-item-active" mat-button routerLink="{{page.path}}" (click)="sidenav.toggle()">{{page.title}}</button>
-            <div class="sidenav_theme_toggle" *ngIf="isLast"><mat-slide-toggle [(ngModel)]="isDarkTheme" (change)="changeThemeLocal()"><mat-icon>bedtime</mat-icon></mat-slide-toggle></div>
+            <button 
+                class="sidenav_a" 
+                routerLinkActive="mat-elevation-z4 list-item-active" 
+                mat-button routerLink="{{page.path}}" 
+                (click)="sidenav.toggle()">
+                {{page.title}}
+            </button>
+            <div 
+                class="sidenav_theme_toggle" 
+                *ngIf="isLast">
+                    <mat-slide-toggle 
+                        [(ngModel)]="isDarkTheme" 
+                        (change)="changeThemeLocal()">
+                            <mat-icon>
+                                bedtime
+                            </mat-icon>
+                    </mat-slide-toggle>
+            </div>
         </div>
     </mat-sidenav>
     <mat-sidenav-content>
